# hacku-kosen-2022-backend

./: .gitignore  .pre-commit-config.yaml  README.md  alias.sh  docker-compose.prod.yaml  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: deploy-openapi-docs-to-github-pages.yaml  deploy-to-cloud-run.yaml
docs/: ER.drawio  architecture.drawio  openapi.yaml
fastapi/: Dockerfile  fastapi.env.tmpl  pyproject.toml
fastapi/app/admin/: __init__.py  message.py  project.py  spotify.py
fastapi/app/api/: __init__.py  message.py  project.py  spotify.py
fastapi/app/migrations/: 0001_squashed_0009_alter_project_spotify_uri.py  0002_project.py  0003_spotifymusic.py  0004_spotifymusic_uri.py  0005_message_messageimage.py  0006_project_top_image_url_project_top_text.py  0007_project_spotify_uri_delete_spotifymusic.py  0008_alter_project_spotify_uri_and_more.py  0008_project_is_publish.py  0008_remove_project_top_image_url_project_top_image.py  0009_alter_project_spotify_uri.py
fastapi/app/models/: __init__.py  base.py  message.py  project.py  spotify.py  user.py
fastapi/app/routers/: __init__.py  message.py  project.py  spotify.py
fastapi/app/schemas/: __init__.py  message.py  project.py  spotify.py
fastapi/config/: asgi.py  exceptions.py  log.py  urls.py
fastapi/config/settings/: base.py  local.py  production.py
fastapi/scripts/: runserver.sh
