[tool.poetry]
name = "hacku-kosen-2022-backend-app"
version = "0.1.0"
description = ""
authors = ["kathmandu777"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.0"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
Pillow = "^9.1.1"
pytz = "^2022.1"
mysqlclient = "^2.1.1"
django-psdb-engine = "^1.0.6"
django-storages = "^1.13.1"
boto3 = "^1.26.27"
fastapi-key-auth = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
